# scoutscrobbler

./: .env  Cargo.toml  main.c  main.sqlite  main.sqlite.sql
src/: blue.rs  entries.rs  from.rs  get_game.rs  get_player_match.rs  graph.rs  login.rs  main.rs  pit.rs  queue.rs  remove_queue.rs  schema.sql  scout.rs  search.rs  submit.rs  submit_bad.rs  team_avarages.rs  user.rs  verify.rs  view_all_entries.rs  viewpit.rs
static/: admin_new_user.html  graph.html  index.html  indexe.html  login_page.html  style.css
static/admin/: index.html
static/graph_page/: index.html
static/pit_page/: auto.html  index.html
static/queue_page/: index.html
static/scout/: index.html  style.css
static/scout_site/: index.html  style.css
static/search_page/: index.html
static/team/: index.html
static/team_e/: index.html
templates/: entries.html.tera  error.html.tera  get_game.html.tera  get_player_match.html.tera  graph_render.html.tera  login.html.tera  pit.html.tera  pitandauto.html.tera  search.html.tera  selectscrob.html.tera  teams.html.tera  yippy.html.tera
